2004-09-20  Matthias Andree <matthias.andree@gmx.de>

	= snapshot 20040920a =
	* xoverutil.c: Initialize xfirst/xlast properly if running without
	fixxover flag.  Fixes XOVER and other trouble retrieving articles
	reported by Jack Raats and Robert Clark.

2004-09-16  Matthias Andree <matthias.andree@gmx.de>

	= snapshot 20040916a =
	* ChangeLog, NEWS, configure.ac: Snapshot 20040916a
	* xoverutil.c: Drop dead code, make rebuilding overview information
	optional for efficiency.
	* applyfilter.c, nntpd.c, texpire.c: Chase getxover() removal.
	* Makefile.am: Add new sgetcwd function.  Use cmp -s to avoid
	irritating cmp output during build.
	* leafnode.h: Add new sgetcwd function.  Drop getxover function.
	* sgetcwd.c, sgetcwd.h: Add new sgetcwd function.

2004-09-15  Matthias Andree <matthias.andree@gmx.de>

	= snapshot 20040915b =
	* configure.ac: Bump version.
	* CREDITS, NEWS, config.example, leafnode.8.in, nntputil.c: Bugfix:
	A timeout while connecting to a server (default 30 seconds) caused
	fetchnews to abort and print "Alarm clock." Reported by Michael
	Rulov.  Change: the fetchnews connect timeout now applies to each of
	the server's addresses.

2004-09-13  Matthias Andree <matthias.andree@gmx.de>

	* README.html: Mention debug info and that the file needs to be
	created.
	* texpire.c: Bugfix: legalxoverline() considered all overview lines
	broken, because it did not skip over the TAB before the Xref: header
	tag.

2004-09-12  Matthias Andree <matthias.andree@gmx.de>

	* NEWS, texpire.8.in: Update texpire man page.
	* texpire.8.in: Rewrite explanation for -f option. Suggested by
	Robert Marshall.

2004-09-01  Ralf Wildenhues <ralf.wildenhues@gmx.de>

	* configure.ac, fetchnews.c: configure.ac: add AC_PROG_CC_C_O to
	placate automake-1.9a.  fetchnews.c: fix format string bug.

2004-08-31  Matthias Andree <matthias.andree@gmx.de>

	* TODO: Update.

2004-08-23  Matthias Andree <matthias.andree@gmx.de>

	* CREDITS: Add Andreas Kneib for a good laugh.